fixing alignment of social share links #3166

--- a/modules/custom/cu_share/scss/cu-share.scss
+++ b/modules/custom/cu_share/scss/cu-share.scss
@@ -35,7 +35,10 @@ $email: #5887D8;
 .cu-share-inline,
 .cu-share-inline-mobile {
   display: block;
-
+  ul {
+    display: flex;
+    flex-direction: row;
+  }
   .soc li {
     margin:0;
     padding:0;
